[package]
name = "ascii_video" 
version = "0.0.1"
authors = ["misha@web2u.org"]
[dependencies]
rand = "0.4.0"
image = "*"
num = "*"
websocket = "*"
json = "*"
base64 = "*"
task_queue = "*"
serde = { version = "1.0", features = ["derive"] } 
rmpv = {version="*", features = ["with-serde"]}
rmp="*"
rmp-serde="*"
hex = "0.3.2"
terminal_size = "*"